--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,32 @@
       </div>
     </nav>
   </div>
-  <div class="d-flex flex-row">
-    <div class="p-2">
-      <router-outlet></router-outlet>
+  <div class="d-flex flex-column" style="min-height: 100vh;">
+    <div class="p-2 text-center" style="background-color: rgb(183,174,159)">
+      <h3>{{subject}}</h3>
     </div>
+
+    <div class="p-2">
+      <div class="container-fluid rounded d-flex flex-xl-row justify-content-xl-between flex-column">
+
+        <div *ngIf="showSideBar" class="p-2 col-xl-1" style="background-color: rgb(199, 192, 192)">
+          <button mat-mini-fab aria-label="Example icon button with a home icon" (click)="showSideBar=!showSideBar">
+            <mat-icon>home</mat-icon>
+          </button>
+          <ul>
+            <li>
+              <a (click)="subject='Customer Discount'" routerLink='./CustomerDiscountReport'>Customer Discount</a>
+            </li>
+          </ul>
+        </div>
+        <!-- Right -->
+        <div class="bloc_2 p-2 col-xl-11" style="background-color: antiquewhite">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+    <!--    Footer area-->
+    <div class="mt-auto p-2 text-center" style="background-color: rgb(77, 68, 68)">I am footer, i will stay here</div>
   </div>
 </div>
 
